...
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_employees"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.5" />

                    <Button
                        android:id="@+id/btn_employees_add"
                        style="?attr/materialIconButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/small_spacing"
                        app:icon="@drawable/ic_add"
                        app:layout_constraintBottom_toBottomOf="parent"
...


        </androidx.appcompat.widget.LinearLayoutCompat>


        <Button
            android:id="@+id/btn_employees_stepper_done"
            style="@style/Widget.pos.Button.TextButton.icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_spacing"
            android:text="@string/done"
            app:icon="@drawable/ic_arrow_left"
...
